--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -4534,11 +4534,11 @@ spec:
                     type: boolean
                   minApplyDelay:
                     description: |-
-                      When replica mode is enabled, this parameter allows the
-                      user to replay the transactions only when the system time
-                      is at least the configured time past the commit time,
-                      offering an opportunity to correct data loss errors.  When
-                      this parameter is set, a promotion token cannot be used.
+                      When replica mode is enabled, this parameter allows you to replay
+                      transactions only when the system time is at least the configured
+                      time past the commit time. This provides an opportunity to correct
+                      data loss errors. Note that when this parameter is set, a promotion
+                      token cannot be used.
                     type: string
                   primary:
                     description: |-
