feat: introduce `minApplyDelay` for delayed replicas (#5181)
Add support for delayed replicas by introducing the
`.spec.replica.minApplyDelay` option, leveraging PostgreSQL's
`recovery_min_apply_delay` capability.

Delayed replicas are intentionally designed to operate with a specified
delay in relation to the primary database. This delay is customizable
using the `.spec.replica.minApplyDelay` option, which corresponds to
PostgreSQL's underlying `recovery_min_apply_delay` parameter.

The primary objective of delayed replicas is to minimize the impact of
unintended SQL statement executions on the primary database. This
functionality is particularly valuable in scenarios where operations
such as `UPDATE` or `DELETE` are executed without a proper `WHERE`
clause.

Closes: #5079

Signed-off-by: Leonardo Cecchi <leonardo.cecchi@enteprisedb.com>
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Co-authored-by: Leonardo Cecchi <leonardo.cecchi@enteprisedb.com>
Co-authored-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -4532,6 +4532,14 @@ spec:
                       object store or via streaming through pg_basebackup.
                       Refer to the Replica clusters page of the documentation for more information.
                     type: boolean
+                  minApplyDelay:
+                    description: |-
+                      When replica mode is enabled, this parameter allows you to replay
+                      transactions only when the system time is at least the configured
+                      time past the commit time. This provides an opportunity to correct
+                      data loss errors. Note that when this parameter is set, a promotion
+                      token cannot be used.
+                    type: string
                   primary:
                     description: |-
                       Primary defines which Cluster is defined to be the primary in the distributed PostgreSQL cluster, based on the
