feat: declarative database management
This patch adds a prototype of the declarative database management
feature by using a separate CRD named Database and exposing the
relative status in its section.

This new CRD is only controller by the instance manager of primary
instance.

Database deletion is triggered by a finalizer with get added
by the reconciliation loop itself. By default the retention policy is
set so "ratain", prevending the controller from deleting the database.

Closes: #4679

Signed-off-by: Leonardo Cecchi <leonardo.cecchi@enterprisedb.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -247,6 +247,26 @@ rules:
 - apiGroups:
   - postgresql.cnpg.io
   resources:
+  - databases
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - postgresql.cnpg.io
+  resources:
+  - databases/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - postgresql.cnpg.io
+  resources:
   - imagecatalogs
   verbs:
   - get
