--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
 - bases/postgresql.cnpg.io_poolers.yaml
 - bases/postgresql.cnpg.io_imagecatalogs.yaml
 - bases/postgresql.cnpg.io_clusterimagecatalogs.yaml
+- bases/postgresql.cnpg.io_databases.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 patches:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
@@ -50,6 +51,7 @@ patches:
 #  target:
 #    kind: CustomResourceDefinition
 #    name: poolers.postgresql.cnpg.io
+#- path: patches/cainjection_in_databases.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
