--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -14,6 +14,8 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the Project itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- publication_editor_role.yaml
+- publication_viewer_role.yaml
 - database_editor_role.yaml
 - database_viewer_role.yaml
 
