feat: delete publications in PG
Signed-off-by: Leonardo Cecchi <leonardo.cecchi@enterprisedb.com>

--- a/docs/src/samples/publication-example.yaml
+++ b/docs/src/samples/publication-example.yaml
@@ -4,7 +4,7 @@ metadata:
   name: publication-sample
 spec:
   name: pub
-  dbName: app
+  dbname: app
   cluster:
     name: cluster-example
   target:
