--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
 - bases/postgresql.cnpg.io_clusterimagecatalogs.yaml
 - bases/postgresql.cnpg.io_databases.yaml
 - bases/postgresql.cnpg.io_publications.yaml
+- bases/postgresql.cnpg.io_subscriptions.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 patches:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
@@ -54,6 +55,7 @@ patches:
 #    name: poolers.postgresql.cnpg.io
 #- path: patches/cainjection_in_databases.yaml
 #- path: patches/cainjection_in_publications.yaml
+#- path: patches/cainjection_in_subscriptions.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
