chore: rename SetClusterStatus to SetStatusInCluster
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -6034,7 +6034,7 @@ spec:
                       type: array
                     status:
                       description: Status contain the status reported by the plugin
-                        through the SetClusterStatus interface
+                        through the SetStatusInCluster interface
                       type: string
                     version:
                       description: |-
