feat: add support for CNPG-I `SetStatusInCluster` capability (#5111)
This patch adds support for the CNPG-I capability
[SetStatusInCluster](https://github.com/cloudnative-pg/cnpg-i/blob/5844b833f4eb1104110cd856d13f45d42d7828a6/proto/operator.proto#L22),
allowing the plugins that implement this new capability to store their
state as a raw JSON string inside the `Cluster` status.

Signed-off-by: Armando Ruocco <armando.ruocco@enterprisedb.com>
Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Co-authored-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>
Co-authored-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -6032,6 +6032,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    status:
+                      description: Status contain the status reported by the plugin
+                        through the SetStatusInCluster interface
+                      type: string
                     version:
                       description: |-
                         Version is the version of the plugin loaded by the
