chore: use full linter version for testing
Before this, we were using only major.minor version to install and run the
golangci-lint, in the latest patch version, we found lot of new issues and
this started to appear in the linter due to the action was installing the latest
version available for the minor version, this fix that by using the full
version of the linter to install.

Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -260,7 +260,7 @@
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "golangci/golangci-lint",
       "versioningTemplate": "loose",
-      "extractVersionTemplate": "^v(?<version>\\d+\\.\\d+)"
+      "extractVersionTemplate": "^v(?<version>\\d+\\.\\d+\\.\\d+)"
     }
   ],
   "packageRules": [
