--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
   - wal_archiving.md
   - backup_volumesnapshot.md
   - recovery.md
+  - service_management.md
   - postgresql_conf.md
   - declarative_role_management.md
   - tablespaces.md
@@ -49,7 +50,6 @@ nav:
   - connection_pooling.md
   - replica_cluster.md
   - kubernetes_upgrade.md
-  - expose_pg_services.md
   - kubectl-plugin.md
   - failover.md
   - troubleshooting.md
@@ -67,6 +67,7 @@ nav:
   - faq.md
   - cloudnative-pg.v1.md
   - supported_releases.md
+  - preview_version.md
   - release_notes.md
   - Appendixes:
     - appendixes/object_stores.md
