✨ Add support for ICU locales in InitDB flags
Postgres 15 introduced support for ICU locales.

This PR makes it possible to configure such locales via the initdb field
of the cluster spec.

Signed-off-by: Étienne Lafarge <etienne.lafarge@gmail.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -1514,6 +1514,10 @@ spec:
                         description: The value to be passed as option `--encoding`
                           for initdb (default:`UTF8`)
                         type: string
+                      icuLocale:
+                        description: The value to be passed as option `--icu-locale`
+                          for initdb (by default empty)
+                        type: string
                       import:
                         description: |-
                           Bootstraps the new cluster by importing data from an existing PostgreSQL
@@ -1571,6 +1575,10 @@ spec:
                       localeCollate:
                         description: The value to be passed as option `--lc-collate`
                           for initdb (default:`C`)
+                        type: string
+                      localeProvider:
+                        description: The value to be passed as option `--locale-provider`
+                          for initdb (by default empty)
                         type: string
                       options:
                         description: |-
