--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,7 +8,7 @@
   "prConcurrentLimit": 5,
 // The branches renovate should target
 // PLEASE UPDATE THIS WHEN RELEASING.
-  "baseBranches": ["main","release-1.22", "release-1.23"],
+  "baseBranches": ["main","release-1.22", "release-1.23", "release-1.24"],
   "ignorePaths": ["docs/**", "releases/**", "contribute/**", "licenses/**", "pkg/versions/**"],
   "postUpdateOptions": ["gomodTidy"],
   "semanticCommits": "enabled",
