chore: Replace exportloopref for copyloopvar linter
With the latest version of Go 1.23, the exportloopref linter doesn't
make sense and shouldn't be used, in replace for this, we should use
copyloopvar.

This is also part to add support for Go 1.23 and golangci-lint 1.60.3

Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,7 +23,7 @@ linters:
     - dupl
     - durationcheck
     - errcheck
-    - exportloopref
+    - copyloopvar
     - gci
     - gocognit
     - goconst
