feat: predefined cnpg-i plugins
This patch adds a new parameter to the operator configuration named
`INCLUDE_PLUGINS`, containing a comma-separated list of plugins to be
always included in the cluster reconciliation.

The installation of the list of plugins is done by the mutating webhook,
and the user can deactivate them at cluster-level by using a new field
named `.spec.plugins.enabled`, defaulting to true.

Signed-off-by: Leonardo Cecchi <leonardo.cecchi@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -3945,6 +3945,10 @@ spec:
                     PluginConfiguration specifies a plugin that need to be loaded for this
                     cluster to be reconciled
                   properties:
+                    enabled:
+                      default: true
+                      description: Enabled is true if this plugin will be used
+                      type: boolean
                     name:
                       description: Name is the plugin name
                       type: string
