--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -1102,6 +1102,16 @@ jobs:
           retention-days: 7
           if-no-files-found: ignore
       -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/cluster_logs/**
+          retention-days: 7
+          if-no-files-found: ignore
+      -
         name: Clean up
         if: always()
         run: |
@@ -1461,6 +1471,16 @@ jobs:
           retention-days: 7
           if-no-files-found: ignore
       -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/cluster_logs/**
+          retention-days: 7
+          if-no-files-found: ignore
+      -
         name: Clean up
         if: always()
         run: |
@@ -1783,6 +1803,16 @@ jobs:
           retention-days: 7
           if-no-files-found: ignore
       -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/cluster_logs/**
+          retention-days: 7
+          if-no-files-found: ignore
+      -
         name: Clean up
         if: always()
         run: |
@@ -2027,6 +2057,16 @@ jobs:
           name: test-failure-contexts-${{ matrix.id }}
           path: |
             tests/*/out/
+          retention-days: 7
+          if-no-files-found: ignore
+      -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/cluster_logs/**
           retention-days: 7
           if-no-files-found: ignore
       -
