test(e2e): add stern-based watcher for capturing pod logs (#5075)
Introduce a watcher to capture all cluster logs during E2E tests using
the Kubernetes API. This change allows selective log retention based on
test outcomes, simplifying log collection and enhancing the efficiency
of debugging test failures.

Closes #5053

Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>
Signed-off-by: Francesco Canovai <francesco.canovai@enterprisedb.com>
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Co-authored-by: Francesco Canovai <francesco.canovai@enterprisedb.com>
Co-authored-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -793,6 +793,17 @@ jobs:
           retention-days: 7
           if-no-files-found: ignore
 
+      -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/cluster_logs/**
+          retention-days: 7
+          if-no-files-found: ignore
+
   # AKS Secrets required
   # secrets.AZURE_CREDENTIALS
   # secrets.AZURE_SUBSCRIPTION
@@ -1088,6 +1099,16 @@ jobs:
           name: test-failure-contexts-${{ matrix.id }}
           path: |
             tests/*/out/
+          retention-days: 7
+          if-no-files-found: ignore
+      -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/cluster_logs/**
           retention-days: 7
           if-no-files-found: ignore
       -
@@ -1450,6 +1471,16 @@ jobs:
           retention-days: 7
           if-no-files-found: ignore
       -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/cluster_logs/**
+          retention-days: 7
+          if-no-files-found: ignore
+      -
         name: Clean up
         if: always()
         run: |
@@ -1772,6 +1803,16 @@ jobs:
           retention-days: 7
           if-no-files-found: ignore
       -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/cluster_logs/**
+          retention-days: 7
+          if-no-files-found: ignore
+      -
         name: Clean up
         if: always()
         run: |
@@ -2016,6 +2057,16 @@ jobs:
           name: test-failure-contexts-${{ matrix.id }}
           path: |
             tests/*/out/
+          retention-days: 7
+          if-no-files-found: ignore
+      -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/cluster_logs/**
           retention-days: 7
           if-no-files-found: ignore
       -
