chore: add E2E test backup tools to Renovate (#5441)
Use renovate to automate the update of E2E test backup tools.

Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
(cherry picked from commit bd86755e192a5682ee73d0a882eafcb8dee9e5f6)

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -1320,8 +1320,8 @@ jobs:
         name: Setup Velero
         uses: nick-fields/retry@v3
         env:
-          VELERO_VERSION: v1.9.2
-          VELERO_AWS_PLUGIN_VERSION: v1.5.1
+          VELERO_VERSION: "v1.9.2"
+          VELERO_AWS_PLUGIN_VERSION: "v1.5.1"
         with:
           timeout_minutes: 10
           max_attempts: 3
