chore(ci): Avoid goreleaser-action warning
We were setting the goreleaser version to `latest` this was triggering
a warning saying going back to v2, now we set it to v2 to avoid any
error or warning.

Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -342,7 +342,7 @@ jobs:
         uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: latest
+          version: v2
           args: ${{ env.BUILD_MANAGER_RELEASE_ARGS }}
         env:
           DATE: ${{ env.DATE }}
@@ -463,7 +463,7 @@ jobs:
           needs.evaluate_options.outputs.test_level == '4'
         with:
           distribution: goreleaser
-          version: latest
+          version: v2
           args: ${{ env.BUILD_MANAGER_RELEASE_ARGS }}
         env:
           DATE: ${{ env.DATE }}
