--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -54,7 +54,9 @@ spec:
           metadata:
             type: object
           spec:
-            description: DatabaseSpec is the specification of a Postgresql Database
+            description: |-
+              Specification of the desired Database.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status
             properties:
               allowConnections:
                 description: True when connections to this database are allowed
@@ -114,7 +116,10 @@ spec:
             - owner
             type: object
           status:
-            description: DatabaseStatus defines the observed state of Database
+            description: |-
+              Most recently observed status of the Database. This data may not be up to
+              date. Populated by the system. Read-only.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status
             properties:
               error:
                 description: Error is the reconciliation error message
@@ -129,6 +134,9 @@ spec:
                 description: Ready is true if the database was reconciled correctly
                 type: boolean
             type: object
+        required:
+        - metadata
+        - spec
         type: object
     served: true
     storage: true
