--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -93,6 +93,12 @@ nfpms:
     formats:
       - rpm
       - deb
+    rpm:
+      signature:
+        key_file: gpg_signing_key.asc
+    deb:
+      signature:
+        key_file: gpg_signing_key.asc
 
 checksum:
   name_template: '{{ .ProjectName }}-{{ .Version }}-checksums.txt'
