--- a/config/olm-samples/kustomization.yaml
+++ b/config/olm-samples/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
 - postgresql_v1_scheduledbackup.yaml
 - postgresql_v1_imagecatalog.yaml
 - postgresql_v1_clusterimagecatalog.yaml
+- postgresql_v1_database.yaml
