chore: use consistent naming
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/config/olm-samples/postgresql_v1_database.yaml
+++ b/config/olm-samples/postgresql_v1_database.yaml
@@ -1,9 +1,9 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
-  name: db-two
+  name: database-sample
 spec:
-  name: two
-  owner: app-two
+  name: database-sample
+  owner: app
   cluster:
-    name: cluster-example
+    name: cluster-sample
