feat: allow defining a template from which to create a new Database
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -108,6 +108,10 @@ spec:
               tablespace:
                 description: The default tablespace of this database
                 type: string
+              template:
+                description: The name of the template from which to create the new
+                  database
+                type: string
             required:
             - cluster
             - name
