chore: test locale and encoding in E2E
Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>

--- a/tests/e2e/fixtures/declarative_databases/database.yaml.template
+++ b/tests/e2e/fixtures/declarative_databases/database.yaml.template
@@ -5,5 +5,7 @@ metadata:
 spec:
   name: declarative
   owner: app
+  locale: 'sv_SE.iso885915'
+  encoding: LATIN9
   cluster:
     name: cluster-with-declarative-databases
