chore: make template field immutable
Signed-off-by: Gabriele Quaresima <gabriele.quaresima@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -112,6 +112,9 @@ spec:
                 description: The name of the template from which to create the new
                   database
                 type: string
+                x-kubernetes-validations:
+                - message: template is immutable
+                  rule: self == oldSelf
             required:
             - cluster
             - name
