chore: add support for ICU fields, clean up
Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>

--- a/tests/e2e/fixtures/declarative_databases/database.yaml.template
+++ b/tests/e2e/fixtures/declarative_databases/database.yaml.template
@@ -6,7 +6,7 @@ spec:
   name: declarative
   owner: app
   lc_ctype: "en_US.utf8"
-  encoding: LATIN1
+  encoding: SQL_ASCII
   template: template0
   cluster:
     name: cluster-with-declarative-databases
