chore: update CRD
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -138,11 +138,11 @@ spec:
                 x-kubernetes-validations:
                 - message: name is immutable
                   rule: self == oldSelf
-                - message: name cannot be postgres
+                - message: the name postgres is reserved
                   rule: self != 'postgres'
-                - message: name cannot be template0
+                - message: the name template0 is reserved
                   rule: self != 'template0'
-                - message: name cannot be template1
+                - message: the name template1 is reserved
                   rule: self != 'template1'
               owner:
                 description: The owner
