--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
   - image_catalog.md
   - bootstrap.md
   - database_import.md
+  - declarative_database_management.md
   - security.md
   - instance_manager.md
   - scheduling.md
