--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -126,6 +126,11 @@ spec:
               date. Populated by the system. Read-only.
               More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status
             properties:
+              comments:
+                description: |-
+                  Comments contains information that may arise during object reconciliation
+                  that will make things more explicit to the user
+                type: string
               error:
                 description: Error is the reconciliation error message
                 type: string
